prevents image from overflowing parent container

--- a/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/form.less
+++ b/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/form.less
@@ -172,6 +172,13 @@
 
 }
 
+.case-tile-container {
+  #persistent-case-tile .persistent-sticky .webapp-markdown-output img {
+    max-height: 100%;
+    max-width: 100%;
+  }
+}
+
 @media screen {
     .case-tile-container {
         position: sticky;
